Se hace get de las propuestas de solucion
