# src/Controller/PropuestaSolucionController.php
@@ -224,6 +224,78 @@ class PropuestaSolucionController
                 StatusCode::HTTP_OK // 200
             );
     }
+
+    /**
+     * Summary: Returns array of propuestaSolucion based on a single questionID
+     *
+     * @OA\Get(
+     *     path        = "/propuestasolucion/{questionId}",
+     *     tags        = { "PropuestaSolucion" },
+     *     summary     = "Returns an array of propuestaSolucion based on a single questionID",
+     *     description = "Returns the array of propuestaSolucion identified by `questionId`.",
+     *     operationId = "tdw_propuestasget_propuestaSolucion",
+     *     @OA\Parameter(
+     *          ref    = "#/components/parameters/questionId",
+     *          
+     *     ),
+     * @OA\Parameter(
+     * ref =  "#/components/parameters/questionId"),
+     *     security    = {
+     *          { "TDWApiSecurity": {} }
+     *     },
+     *     @OA\Response(
+     *          response    = 200,
+     *          description = "Propuesta solucion ",
+     *          @OA\JsonContent(
+     *              ref  = "#/components/schemas/PropuestaSolucionArray"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response    = 401,
+     *          ref         = "#/components/responses/401_Standard_Response"
+     *     ),
+     *     @OA\Response(
+     *          response    = 403,
+     *          ref         = "#/components/responses/403_Forbidden_Response"
+     *     ),
+     *     @OA\Response(
+     *          response    = 404,
+     *          ref         = "#/components/responses/404_Resource_Not_Found_Response"
+     *     )
+     * )
+     * @param Request $request
+     * @param Response $response
+     * @param array $args
+     * @return Response
+     */
+
+    public function propuestasget(Request $request, Response $response, array $args): Response
+    {
+        //403
+        if (!$this->jwt->isMaestro) {
+            
+            return Error::error($this->container, $request, $response, StatusCode::HTTP_FORBIDDEN);
+        }
+        //revisar que exista una solucion para esa cuestion hcha por ese usuario 
+        $propuestaSolucion = Utils::getEntityManager()->getRepository(PropuestaSolucion::class)
+                ->findBy(['cuestionesIdcuestion'=> $args['id'] ]);
+        
+        //aun no responde
+        if($propuestaSolucion==null){
+            return Error::error($this->container, $request, $response, StatusCode::HTTP_NOT_FOUND);
+        }
+        $this->logger->info(
+            $request->getMethod() . ' ' . $request->getUri()->getPath(),
+            [ 'uid' => $this->jwt->user_id, 'status' => StatusCode::HTTP_OK ]
+        );
+
+        //200 
+        return $response
+            ->withJson(
+                $propuestaSolucion,
+                StatusCode::HTTP_OK // 200
+            );
+    }
  /**
      * Summary: Updates a solution
      *
